# fullstack-rust-axum-dioxus-rwa

./: .gitignore  Cargo.toml  LICENSE  readme.md  run_dev.sh
backend/: .env  Cargo.toml  build.sh  readme.md  run_dev.bat  run_dev.sh  run_dev_watch.sh
backend/.local/thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
backend/config/: base.yml  local.yml  production.yml
backend/doc/: readme.md
backend/migrations/: 20220823172547_create_accounts_table.sql  20220905163834_create_followings_table.sql  20220912195826_create_articles_table.sql  20220912203610_create_favorited_articles_table.sql  20221106211345_create_tags_tables.sql
backend/ops/: init_db.sh  readme.md  update_db.sh
backend/src/: app_errors.rs  app_state.rs  config.rs  db.rs  jwt.rs  lib.rs  token.rs
backend/src/domain/: mod.rs
backend/src/domain/logic/: articles_logic.rs  auth_logic.rs  mod.rs
backend/src/domain/model/: article.rs  mod.rs  user.rs
backend/src/handlers/: api_err.rs  common_payloads.rs  common_responses.rs  dtos.rs  follow_user.rs  get_curr_user.rs  get_user_profile.rs  login_user.rs  mod.rs  payloads.rs  register_user.rs  responses.rs  token_claims_extractor.rs  update_curr_user.rs
backend/src/handlers/articles/: create_article.rs  get_articles.rs  mod.rs
backend/src/model/: mod.rs  user.rs
backend/src/repo/: mod.rs  user_repo_pg.rs
backend/src/repos/: articles_repo.rs  mod.rs  users_repo.rs
backend/src/web_api/: extractors.rs  mod.rs  responses.rs  routes.rs  token.rs
backend/src/web_api/articles/: create_article.rs  delete_article.rs  get_articles.rs  mod.rs  update_article.rs
backend/src/web_api/extractors/: claims_extractor.rs  extractors_utils.rs  inputjson_extractor.rs  mod.rs  userid_extractor.rs
backend/src/web_api/health/: healthcheck.rs  mod.rs
backend/src/web_api/users/: dtos.rs  follow_user.rs  get_curr_user.rs  get_user_profile.rs  login_user.rs  mod.rs  register_user.rs  responses.rs  update_curr_user.rs
common_model/: Cargo.toml
common_model/src/: lib.rs  login.rs
frontend/: .gitignore  Cargo.toml  Dioxus.toml  index.html  readme.md  run_dev.sh
frontend/src/: commons.rs  main.rs
frontend/src/comps/: footer.rs  header.rs  mod.rs  navbar.rs
frontend/src/comps/form/: form_button_lg.rs  form_field_lg.rs  form_input_lg.rs  form_textarea_lg.rs  mod.rs
frontend/src/pages/: article_add.rs  home.rs  mod.rs  notfound.rs  settings.rs  sign_in.rs  sign_out.rs  sign_up.rs
