[workspace]
members = [ "backend", "frontend", "common_model" ]
resolver = "2"

# [patch.crates-io]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
# dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git" }
# dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git"}

