[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.5.15"
axum-extra = { version = "0.3.7", features = ["spa"] }
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
