[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = { version = "0.5.15", features = [ "headers" ] }
axum-extra = { version = "0.3.7", features = ["spa"] }
chrono = { version = "0.4.22", features = [ "serde" ] }
clap = { version = "3.2.17", features = ["derive"] }
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
jsonwebtoken = "8.1.1"
log = "0.4.17"
secrecy = { version = "0.8.0", features = [ "serde" ]}
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
thiserror = "1.0.32"
fastrand = "1.8.0"
md5 = "0.7.0"
uuid = { version = "1.1.2", features = [ "serde", "v4" ] }
slug = "0.1.4"


[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "chrono",               # 
    "json",                 # 
    "macros",               # Have access to `sqlx::query!` and `sqlx::query_as!` macros.
    "migrate",              # Ability to programmatically manage database migrations.
    "postgres",             # Use PostgreSQL specific features (such as non-standard SQL type).
    "runtime-tokio-rustls", # Use Tokio runtime for its futures and rustls as TLS backend.
    "uuid"                  # Add support for mapping SQL UUID to Uuid type from `uuid` create.
]
