[package]
name = "frontend"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }

log = "0.4.6"
sir = { version = "0.3.0", features = [ "dioxus" ] }

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
