[package]
name = "frontend"
version = "0.2.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

[dependencies]

common_model = { path = "../common_model" }

dioxus = "0.3.2"
dioxus-web = { version = "0.3.2" }
dioxus-router = { version = "0.3.0", features = [ "web" ] }
dioxus-use-storage = "0.3.1"

log = "0.4.17"
sir = { version = "0.3.0", features = [ "dioxus" ] }

wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

reqwest = { version="0.11.18", features = [ "blocking", "json" ] }


